# Browser-Agent

./: .gitignore  README.md  console_interface.py  main_agent.py  pyproject.toml  run_agent.py
core/: __init__.py  config.py  exceptions.py  helpers.py  logging_config.py  observability.py
core/actions/: manager.py  models.py
core/actions/registry/: manager.py  models.py
core/ai_models/: __init__.py  messages.py  models.py  schema.py
core/ai_models/anthropic/: chat.py  serializer.py
core/ai_models/openai/: chat.py  serializer.py
core/captures/: __init__.py  manager.py
core/dom_processing/: enhanced_snapshot.py  manager.py  markdown_extractor.py  models.py
core/dom_processing/serializer/: clickable_elements.py  eval_serializer.py  html_serializer.py  paint_order.py  serializer.py
core/interaction/: __init__.py  element.py  helpers.py  mouse.py  page.py
core/orchestrator/: manager.py  models.py  prompts.py  system_prompt.md
core/orchestrator/execution/: __init__.py  action_execution_manager.py  run_manager.py
core/orchestrator/llm/: __init__.py  llm_manager.py
core/orchestrator/message_manager/: manager.py  models.py
core/orchestrator/rerun/: __init__.py  (+1 more)
core/pricing/: __init__.py  manager.py  models.py
core/session/: __init__.py  browser_operations.py  cdp_operations.py  dom_helpers.py  events.py  lifecycle_manager.py  models.py  navigation_manager.py  profile.py  screenshot_manager.py  session.py  session_manager.py  storage_manager.py  tab_manager.py  visual_operations.py  watchdog_base.py
core/specialists/: __init__.py  email_subagent.py
(+20 files in other folders)
